fix overflow hidden

--- a/src/components/functional_components/initialBounce/InitialBounce.css
+++ b/src/components/functional_components/initialBounce/InitialBounce.css
@@ -56,7 +56,6 @@
 }
 
 .container-fade-in {
-  overflow: hidden;
   animation: fade-in 3s ease;
 }
 
